# handy_tools

./: .gitignore  .python-version  CLAUDE.md  Makefile  docker-compose.yaml  package-lock.json
backend/: .env.example  Dockerfile  MIGRATIONS.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e0f732e30f11_documents_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  document.py
backend/app/routers/: documents.py  hello.py
backend/app/schemas/: documents.py
backend/app/services/: documents.py
backend/tests/: conftest.py  test_documents.py  test_hello.py
frontend/: .env.example  .gitignore  API_CLIENT.md  Dockerfile  README.md  openapi-ts.config.ts  package-lock.json  package.json
frontend/docs/: features.md
frontend/src/api/: runtime-config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/finances/: page.tsx
frontend/src/app/stock-market/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/documents/: DocumentsPage.tsx
frontend/src/components/finances/: FinancesPage.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/settings/: SettingsModal.tsx
frontend/src/components/stock-market/: StockMarketPage.tsx
frontend/src/context/: DocumentsContext.tsx  FinancesContext.tsx  StockMarketContext.tsx
(+8 files in other folders)
