[project]
name = "handy-tools-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary, pool]==3.3.3",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
